# t-simcne

./: .gitignore  .readthedocs.yaml  CITATION.bib  default.do  default.run.do  default.telegram.do  launch-on-slurm.sh  pyproject.toml  readme.md
cnexp/: all.py  base.py  callback.py  dispatch.py  imagedistortions.py  lrschedule.py  names.py  optimizers.py  redo.py  suptrain.py  train.py  tsimcne.py
cnexp/dataset/: base.py  cifar.py  dataloader.py  load_torchvision_dataset.py  medmnist.py  tiny_imagenet.py
cnexp/eval/: __init__.py  knn.py  linear.py
cnexp/losses/: base.py  infonce.py  infonce_alt.py  old_impl.py  supervised.py
cnexp/misc/: telegram.example.json  telegram_send.py
cnexp/models/: mutate_model.py  simclr_like.py
cnexp/plot/: __init__.py  scalebar.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  parameter_guide.rst
media/: default.png.do  project.mplstyle
media/experimental/: cifar.duplicates.pdf.do  cifar.outliers.pdf.do  cifar100-classes.pdf.do  cifar100.flatfish.pdf.do  cifar100.labels.py  derma.classes.pdf.do  pretrained-best-cluster.pdf.do  supervised.pdf.do
media/interactive/: cifar-exploration.py  cifar100-exploration.py
media/misc/: cos3d.pdf.do  default.crops.pdf.do  default.ftstages.pdf.do  default.reg_sphere.pdf.do  finetune-stages.pdf.do  image-transforms.pdf.do  sample-images.pdf.do  viz.pdf.do
media/paper/: arch.pdf.do  cifar.annotated.pdf.do  cifar.legend.pdf.do  cifar100.gallery.pdf.do  cifar100.labels.pdf.do  default.budget.pdf.do  default.ftstages.pdf.do  default.gallery.pdf.do  default.norms.pdf.do  default.norms.z.pdf.do  default.others.gallery.pdf.do  default.pretrained.pdf.do  default.seeds.pdf.do  derma.classes.pdf.do  derma.pdf.do  pretrained-resnets.pdf.do  tsne-cifars.pdf.do  tsne-pixel.pdf.do  tsne-simclr.pdf.do
media/tex/: .gitignore  accuracies.cifar10.tex.do  default.accuracies.tex.do  default.pdf.do
stats/: accuracy-table-runs.csv.do  default.pixelspace.npz.do  default.pretrained.resnet.npz.do  default.tsne.simclr.npz.do  test-2080ti.txt.do
stats/acctbl/: default.csv.do  default.part.csv.do
stats/cluster/: default.csv.do
tsimcne/: __init__.py  ffcv_augmentation.py  imagedistortions.py  lrschedule.py  names.py  optimizers.py  redo.py  train.py  tsimcne.py
(+21 files in other folders)
