[project]
name = "tsimcne"
version = "0.1.0"
description = "Visualization tool for unsupervised image visualization (ICLR 2023)"
authors = [
    {name = "Jan Niklas Böhm", email = "jan-niklas.boehm@uni-tuebingen.de"},
]
dependencies = [
    "torch",
    "torchvision",
    "lightning",
    "numpy",
    "pillow",
]
requires-python = ">=3.9"
license = {text = "EUPL"}
readme = "readme.md"

[project.urls]
homepage = "https://github.com/berenslab/t-simcne"


[tool]
[tool.pdm]
[tool.pdm.build]
package-dir = "tsimcne"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
